# agentxp

./: .env.example  .gitignore  .prettierignore  AGENTS.md  BOOTSTRAP.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README-en.md  README.md  deploy.sh  package.json  publish-q1089-xp.ts  setup-dev.sh  sign-event-temp.ts  tmp_publish_openclaw_61844.ts  tmp_publish_openclaw_65494.mjs  tmp_publish_openclaw_65494.ts  tsconfig.json  vitest.config.ts
.changeset/: openclaw-plugin-directory-rename.md  pre.json  repo-layout-refactor.md  supernode-hardening.md
agents/: package.json
auto-extract/: compare-v1-v2.ts  experiment-v1.md  extract-prompt-v1.txt  extract-prompt-v2.txt  extract.ts  package-lock.json  package.json  parse-transcript.py  retrotest-v2.ts  run-extraction.ts  test-classifier.ts  test-extract.sh  test-extract.ts  tsconfig.json  validate-v2.test.ts
dashboard/: package.json  server.js
deploy/: RUNBOOK.md  build-on-vps.sh  ecosystem.config.cjs
docs/: AUTO-CONTRIBUTE.md  COLD-START.md  DEPLOY.md  DESIGN.md  EXECUTABLE-EXPERIENCES.md  MILESTONES.md  RELEASING.md  SDK-DESIGN.md  SPEC-experience-v0.1.md  all-experiences-export-zh.md  openapi.yaml  openclaw-plugins.md  spec-in-progress.md  spec-survey.md
examples/: full-lifecycle.sh  langchain-agent.ts  mcp-test.sh  quickstart.sh  (+2 more)
python-sdk/: LICENSE  README.md  pyproject.toml
python-sdk/agentxp/: __init__.py  auto_extract.py  client.py  types.py
python-sdk/agentxp/integrations/: __init__.py  langchain.py
python-sdk/tests/: test_auto_extract.py  test_client.py  test_types.py
(+767 files in other folders)
