[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentxp"
version = "0.1.0"
description = "Cross-agent experience sharing network — Python SDK"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "AgentXP", email = "hello@agentxp.io" },
]
keywords = [
    "agent",
    "ai",
    "experience",
    "sharing",
    "llm",
    "langchain",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://agentxp.io"
Documentation = "https://agentxp.io/docs"
Repository = "https://github.com/nicepkg/agentxp"
Issues = "https://github.com/nicepkg/agentxp/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.sdist]
include = ["agentxp/"]

[tool.hatch.build.targets.wheel]
packages = ["agentxp"]
